--- a/HW3/public/experiments.html
+++ b/HW3/public/experiments.html
@@ -18,28 +18,24 @@
 		}
 	</style>
 	<script type="module">
-		// Import the functions you need from the SDKs you need
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js";
-		import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.5/firebase-analytics.js";
-		// TODO: Add SDKs for Firebase products that you want to use
-		// https://firebase.google.com/docs/web/setup#available-libraries
-	  
-		// Your web app's Firebase configuration
-		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-		const firebaseConfig = {
-		  apiKey: "AIzaSyCf-ZzglFpUtmFpBBN08tFOV464tPRopCw",
-		  authDomain: "cse134hw2-302ea.firebaseapp.com",
-		  projectId: "cse134hw2-302ea",
-		  storageBucket: "cse134hw2-302ea.appspot.com",
-		  messagingSenderId: "761303250039",
-		  appId: "1:761303250039:web:9e61461ec7368ac9cb0272",
-		  measurementId: "G-S103XSE4NT"
-		};
-	  
-		// Initialize Firebase
-		const app = initializeApp(firebaseConfig);
-		const analytics = getAnalytics(app);
-	</script>
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+          apiKey: "AIzaSyCEY8bcfZrUCW3Jxr7ZcQqm0WNdxdYDiJs",
+          authDomain: "cse134hw3-4242dwu.firebaseapp.com",
+          projectId: "cse134hw3-4242dwu",
+          storageBucket: "cse134hw3-4242dwu.appspot.com",
+          messagingSenderId: "712520922169",
+          appId: "1:712520922169:web:029c542eac8f238076c9e8"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+      </script>
 </head>
 
 <body>
