--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Darren Wu" />
-	<meta name="keywords" content="HTML, CSS, JavaScript" />
+	<meta name="keywords" content="HTML, CSS" />
 	<meta name="author" content="Darren Wu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Darren Wu</title>
@@ -35,7 +35,7 @@
 	  
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
-	  </script>
+	</script>
 </head>
 
 <body>
