--- a/HW2/public/index.html
+++ b/HW2/public/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Darren Wu" />
-	<meta name="keywords" content="HTML, CSS, JavaScript" />
+	<meta name="keywords" content="HTML" />
 	<meta name="author" content="Darren Wu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Darren Wu</title>
