--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -8,7 +8,8 @@
 	<meta name="author" content="Darren Wu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Darren Wu</title>
-	<link href="images/favicon.ico" rel="icon" />
+	<link rel="icon" href="images/favicon.ico" />
+	<link rel="stylesheet" href="styles/main.css" />
 	<script type="module">
 		// Import the functions you need from the SDKs you need
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
