--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -33,42 +33,35 @@
 
 <body>
 	<header>
-		<h1><a href="">Darren Wu</a></h1>
 		<nav>
 			<a href="#biography">Biography</a> |
-			<a href="#cv">CV</a> |
-			<!--a href="#projects">Projects</a--> |
+			<a href="#cv">CV</a>
+		</nav>
+		<h1><a href="">Darren Wu</a></h1>
+		<nav>
 			<a href="#contact">Contact</a> |
 			<a href="experiments.html">Experiments</a>
 		</nav>
 	</header>
 
 	<main>
-		<h2 id="biography">Biography</h2>
-			<svg width="50%" height="100%">
-				<rect width="100%" height="100%" fill="grey" />
-				<circle cx="5%" cy="100%" r="150" fill="blue" stroke="black" />
-				<text x="50" y="100" font-family="Verdana" font-size="55" fill="white" stroke="black" stroke-width="2">
-					Hello!
-				</text>
-			</svg>
+		<section class="grey-section">
+			<h2 id="biography">Biography</h2>
 			<p>
 				I'm a <b>Cognitive Science Machine Learning</b> and <b>Computer Engineering</b> student at <strong>UCSD</strong>. I want to go 
-				into the field of <span style="color: gray;">brain computer interfaces</span> and software engineering. I start programming projects for 
+				into the field of brain computer interfaces and software engineering. I start programming projects for 
 				various topics of interest, such as:
 			</p>
 			<ul>
 				<li>Discord Bots</li>
 				<li>Game Mods</li>
-				<template>
-					<li>Automation</li>
-				</template>
+				<li>Automation</li>
 			</ul>
-			<hr/>
+		</section>
 
-		<h2 id="cv">CV</h2>
+		<section class="white-section">
+			<h2 id="cv">CV</h2>
 			<table> <!-- width="50%" -->
-				<caption>Job History</caption>
 				<colgroup>
 					<col span="3"> <!-- width="150" -->
 					<col>
@@ -81,10 +74,12 @@
 				</tr>
 				<tr>
 					<td><img src="images/companies/sdsc.webp" alt="SDSC"></td>
-					<td>Software Development Engineer Intern</td>
+					<td>Software Development Engineer Project Manager</td>
 					<td>Jan 2022 - Current</td>
 					<td>
 						<ul>
+							<li>Modernizing and cleaning old codebases to newer versions</li>
+							<li>Assisting student Interns</li>
 							<li>Just started tbh</li>
 						</ul>
 					</td>
@@ -117,12 +112,12 @@
 					</td>
 				</tr>
 			</table>
-			<hr/>
+		</section>
 
 		<!--h2 id="Projects">Projects</h2>
 			<hr/-->
-		
-		<h2 id="contact">Contact</h2>
+		<section class="grey-section">
+			<h2 id="contact">Contact</h2>
 			<h3>Email</h3>
 				<p>wudarren0908@gmail.com</p>
 			<section id="social-medias">
@@ -186,6 +181,7 @@
 					</fieldset>
 				</form>
 			</div>
+		</section>
 	</main>
 
 	<footer>
