--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -33,12 +33,12 @@
 
 <body>
 	<header>
-		<nav>
+		<nav class="nav-container">
 			<a href="#biography">Biography</a> |
 			<a href="#cv">CV</a>
 		</nav>
 		<h1><a href="">Darren Wu</a></h1>
-		<nav>
+		<nav class="nav-container">
 			<a href="#contact">Contact</a> |
 			<a href="experiments.html">Experiments</a>
 		</nav>
@@ -61,11 +61,8 @@
 
 		<section class="white-section">
 			<h2 id="cv">CV</h2>
-			<table> <!-- width="50%" -->
-				<colgroup>
-					<col span="3"> <!-- width="150" -->
-					<col>
-				</colgroup>
+			<table>
+
 				<tr>
 					<th>Icon</th>
 					<th>Job Title</th>
