--- a/HW3/public/experiments.html
+++ b/HW3/public/experiments.html
@@ -9,14 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Experiments</title>
 	<link href="images/favicon.ico" rel="icon" />
-	<style>
-		body{
-			background-color: lightgrey;
-		}
-		table, th, td {
-  			border: 1px solid black;
-		}
-	</style>
+    <link rel="stylesheet" href="styles/main.css" />
 	<script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
