--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -12,22 +12,26 @@
 	<link rel="stylesheet" href="styles/main.css" />
 	<script type="module">
 		// Import the functions you need from the SDKs you need
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
+		import { initializeApp } from "firebase/app";
+		import { getAnalytics } from "firebase/analytics";
 		// TODO: Add SDKs for Firebase products that you want to use
 		// https://firebase.google.com/docs/web/setup#available-libraries
-	  
+
 		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
-		  apiKey: "AIzaSyCEY8bcfZrUCW3Jxr7ZcQqm0WNdxdYDiJs",
-		  authDomain: "cse134hw3-4242dwu.firebaseapp.com",
-		  projectId: "cse134hw3-4242dwu",
-		  storageBucket: "cse134hw3-4242dwu.appspot.com",
-		  messagingSenderId: "712520922169",
-		  appId: "1:712520922169:web:029c542eac8f238076c9e8"
+		apiKey: "AIzaSyCEY8bcfZrUCW3Jxr7ZcQqm0WNdxdYDiJs",
+		authDomain: "cse134hw3-4242dwu.firebaseapp.com",
+		projectId: "cse134hw3-4242dwu",
+		storageBucket: "cse134hw3-4242dwu.appspot.com",
+		messagingSenderId: "712520922169",
+		appId: "1:712520922169:web:029c542eac8f238076c9e8",
+		measurementId: "G-9LX2S5ZKGN"
 		};
-	  
+
 		// Initialize Firebase
 		const app = initializeApp(firebaseConfig);
+		const analytics = getAnalytics(app);
 	</script>
 </head>
 
