--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -53,8 +53,8 @@
 			<h2 id="biography">Biography</h2>
 			<p>
 				I'm a <b>Cognitive Science Machine Learning</b> and <b>Computer Engineering</b> student at <strong>UCSD</strong>. I want to go 
-				into the field of brain computer interfaces and software engineering. I start programming projects for 
-				various topics of interest, such as:
+				into the field of brain computer interfaces and software engineering. I start programming projects for various topics of interest, 
+				such as:
 			</p>
 			<ul>
 				<li>Discord Bots</li>
