--- a/HW3/public/index.html
+++ b/HW3/public/index.html
@@ -38,20 +38,22 @@
 <body>
 	<header>
 		<nav class="nav-container">
-			<a href="#biography">Biography</a> |
-			<a href="#cv">CV</a>
+			<a class="nav-item" href="#biography">Biography</a>
+			<span class="nav-breaker">|</span>
+			<a class="nav-item" href="#cv">CV</a>
 		</nav>
 		<h1><a href="">Darren Wu</a></h1>
 		<nav class="nav-container">
-			<a href="#contact">Contact</a> |
-			<a href="experiments.html">Experiments</a>
+			<a class="nav-item" href="#contact">Contact</a>
+			<span class="nav-breaker">|</span>
+			<a class="nav-item" href="experiments.html">Experiments</a>
 		</nav>
 	</header>
 
 	<main>
 		<section class="grey-section">
 			<h2 id="biography">Biography</h2>
-			<p>
+			<p class="biography">
 				I'm a <b>Cognitive Science Machine Learning</b> and <b>Computer Engineering</b> student at <strong>UCSD</strong>. I want to go 
 				into the field of brain computer interfaces and software engineering. I start programming projects for various topics of interest, 
 				such as:
