added transitions to links, fixed experiments page

--- a/HW3/public/experiments.html
+++ b/HW3/public/experiments.html
@@ -10,6 +10,11 @@
 	<title>Experiments</title>
 	<link href="images/favicon.ico" rel="icon" />
     <link rel="stylesheet" href="styles/main.css" />
+    <style>
+        body{
+            background-color: white;
+        }
+    </style>
 	<script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "firebase/app";
@@ -50,7 +55,8 @@
             <h3>Quoted Details of Aside</h3>
                 <aside>
                     <h4>Aside</h4>
-                    <pre>dramatic and literary device used in literature and media that gives the audience a glimpse into the character's thoughts</pre>
+                    <pre>dramatic and literary device used in literature and media 
+that gives the audience a glimpse into the character's thoughts</pre>
                 </aside>
 
                 <details>
