--- a/HW4/public/nativedialogs.html
+++ b/HW4/public/nativedialogs.html
@@ -9,7 +9,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Native Dialogs</title>
 	<link href="images/favicon.ico" rel="icon" />
-    <link rel="stylesheet" href="styles/main.css" />
+  <link rel="stylesheet" href="styles/main.css" />
+  <style>
+    body{
+      background-color: white;
+    }
+  </style>
 	<script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
@@ -32,7 +37,7 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
-      </script>
+  </script>
 </head>
 
 <body>
@@ -57,11 +62,7 @@
 		<hr/>
 		<p>💯This page was adapted with &hearts; by Darren Wu 💯</p>
 	</footer>
-  <script type="module">
-		import { update } from "./scripts/nativedialogs.js";
-		window.update = update;
-	</script>
-	<script nomodule src="./scripts/nativedialogs-es5.js"></script>
+  <script type="text/javascript" src="./scripts/nativedialogs.js"></script>
 </body>
 
 </html>
