hw 4 part 1 finished

--- a/HW4/public/index.html
+++ b/HW4/public/index.html
@@ -106,10 +106,8 @@
 						<ul>
 							<li>Implemented automation scripts for obtaining specs, creating users in Windows Server, setting static IP addresses, and installing software</li>
 							<li>Optimized systems software & streamlined operations via hardware architecture proposal</li>
-							<li>trengthened security through defining & managing clearance permissions in system</li>
-							<li>Spearheaded system refactoring to improve management system alongside lead technician</li>
-							<li>Built, fixed, and deployed computers and laptops for company use across Ventura and Santa Barbara county</li>
-							<li>Installed network cables in new locations and fixed issues in any current locations</li>
+							<li>Strengthened security through defining & managing clearance permissions in system</li>
+							<li>Spearheaded system refactoring to improve management system alongside IT head</li>
 						</ul>
 					</td>
 				</tr>
