updated native dialogs

--- a/HW4/public/nativedialogs.html
+++ b/HW4/public/nativedialogs.html
@@ -54,10 +54,10 @@
 
 	<footer>
 		<hr/>
-		<p>💯This page was adapted with &hearts; by Darren Wu 💯</p>
+		<p>💯This page was made with &hearts; by Darren Wu 💯</p>
 	</footer>
   <script type="text/javascript" src="./scripts/dompurify/purify.min.js"></script>
-  <script type="text/javascript" src="./scripts/nativedialogs.js"></script>
+  <script type="module" src="./scripts/nativedialogs.js"></script>
 </body>
 
 </html>
