small change to experiments page

--- a/HW4/public/experiments.html
+++ b/HW4/public/experiments.html
@@ -111,7 +111,7 @@ that gives the audience a glimpse into the character's thoughts</pre>
 
 	<footer>
 		<hr/>
-		<p>💯This page was adapted with &hearts; by Darren Wu 💯</p>
+		<p>💯This page was made with &hearts; by Darren Wu 💯</p>
 	</footer>
 </body>
 
