--- a/HW4/public/crud.html
+++ b/HW4/public/crud.html
@@ -81,13 +81,16 @@
   <dialog id="create-update-dialog">
     <form method="dialog">
       <label for="post-title">Post Title</label>
-      <input type="text" id="post-title" name="posttitle" placeholder="Post Title...">
+      <br/>
+      <textarea type="text" id="post-title" name="posttitle" placeholder="Post Title..."></textarea>
       <br/>
       <label for="post-date">Post Date</label>
+      <br/>
       <input type="text" id="post-date" name="postdate" placeholder="Post Date...">
       <br/>
       <label for="post-summary">Post Summary</label>
-      <input type="text" id="post-summary" name="postsummary" placeholder="Post Summary...">
+      <br/>
+      <textarea type="text" id="post-summary" name="postsummary" placeholder="Post Summary..."></textarea>
       <br/>
       <br/>
       <button id="create-update-ok-button" value="">OK</button>
