--- a/HW4/public/styledcrud.html
+++ b/HW4/public/styledcrud.html
@@ -38,6 +38,16 @@
       max-width: 100px;
       width: 10vw;
     }
+    table, th, td {
+      border: 0px solid black;
+      border-collapse: collapse;
+    }
+    tr{
+      border-bottom: 1px solid black;
+    }
+    td, td{
+      padding: 2px 5px;
+    }
   </style>
 </head>
 
