--- a/HW4/public/styledcrud.html
+++ b/HW4/public/styledcrud.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="HTML, CSS, JavaScript" />
 	<meta name="author" content="Darren Wu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>CRUD</title>
+	<title>Styled CRUD</title>
 	<link href="images/favicon.ico" rel="icon" />
   <link rel="stylesheet" href="styles/main.css" />
 	<script type="module">
@@ -58,7 +58,7 @@
 
 	<main>
     <section class="grey-section">
-		  <h2 id="nativedialogs">CRUD</h2>
+		  <h2 id="styldecrud">Styled CRUD</h2>
       <table id="crud-table">
         <thead>
           <tr>
