--- a/HW5/public/customdialogs.html
+++ b/HW5/public/customdialogs.html
@@ -11,27 +11,27 @@
 	<link href="images/favicon.ico" rel="icon" />
   <link rel="stylesheet" href="styles/main.css" />
 	<script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyDPtOUwxFIoQNATKIszsXItciFMBzAsPqI",
-          authDomain: "cse134hw4-4242dw.firebaseapp.com",
-          projectId: "cse134hw4-4242dw",
-          storageBucket: "cse134hw4-4242dw.appspot.com",
-          messagingSenderId: "691282856016",
-          appId: "1:691282856016:web:d72ddb7eb3b840c5202955",
-          measurementId: "G-S2HHDVSLC3"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDG4CRmraLOBe6b64j1mxTE8szMos-o3Ms",
+      authDomain: "cse134hw5-4242dwu.firebaseapp.com",
+      projectId: "cse134hw5-4242dwu",
+      storageBucket: "cse134hw5-4242dwu.appspot.com",
+      messagingSenderId: "750287127588",
+      appId: "1:750287127588:web:53e253cd288579aaea44b1",
+      measurementId: "G-6NWJ8QSS4R"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 </head>
 
