--- a/HW5/public/index.html
+++ b/HW5/public/index.html
@@ -43,7 +43,7 @@
 			<span class="nav-breaker">|</span>
 			<a class="nav-item" href="#cv">CV</a>
 		</nav>
-		<h1><a href="">Darren Wu</a></h1>
+		<h1><a href="index.html">Darren Wu</a></h1>
 		<nav class="nav-container">
 			<a class="nav-item" href="#contact">Contact</a>
 			<span class="nav-breaker">|</span>
