--- a/HW5/public/index.html
+++ b/HW5/public/index.html
@@ -39,15 +39,15 @@
 <body>
 	<header>
 		<nav class="nav-container">
-			<a class="nav-item" href="#biography">Biography</a>
+			<a class="nav-item on-page-link" href="#biography">Biography</a>
 			<span class="nav-breaker">|</span>
-			<a class="nav-item" href="#cv">CV</a>
+			<a class="nav-item on-page-link" href="#cv">CV</a>
 		</nav>
 		<h1><a href="index.html">Darren Wu</a></h1>
 		<nav class="nav-container">
-			<a class="nav-item" href="#contact">Contact</a>
+			<a class="nav-item" href="./crud.html">CRUD</a>
 			<span class="nav-breaker">|</span>
-			<a class="nav-item" href="experiments.html">Experiments</a>
+			<a class="nav-item" href="./methodtest.html">MethodTest</a>
 		</nav>
 	</header>
 
