--- a/HW5/public/crud.html
+++ b/HW5/public/crud.html
@@ -42,6 +42,7 @@
       <h2 id="firebase-login">Login</h2>
       <div id="firebaseui-auth-container"></div>
       <div id="loader">Loading...</div>
+      <p id="current-user"></p>
       <button id="sign-out-button">Sign Out</button>
 		  <h2 id="styldecrud">Styled CRUD</h2>
       <table id="crud-table">
